--- a/android/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/android/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,7 +4,7 @@
     <item android:drawable="@color/colorSplash" />
 
     <item>
-        <bitmap android:src="@drawable/logo"
+        <bitmap android:src="@drawable/logo1"
             android:gravity="center" />
     </item>
 
