updated logo sizing for splash screen

--- a/android/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/android/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,8 +4,7 @@
     <item android:drawable="@color/colorSplash" />
 
     <item>
-        <bitmap android:src="@drawable/logo1"
+        <bitmap android:src="@drawable/logoandroid"
             android:gravity="center" />
     </item>
-
 </layer-list>
