updated splash screen for android, now renders with new logo

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorSplash">#1de9b6</color>
+    <color name="colorSplash">#80CBC4</color>
 </resources>
